<resources>
    <string name="app_name">BMI_cal</string>
    <string name="logo">logo</string>
    <string name="age">Age</string>
    <string name="enter_age">Enter your age </string>
    <string name="weight">Weight</string>
    <string name="enter_weight">Enter your weight(kg)</string>
    <string name="enter_height">Enter your height(cm) </string>
    <string name="height">Height </string>
    <string name="gender">Select Gender </string>
    <string name="male">Male </string>
    <string name="female">Female </string>
    <string name="btn">Calculate </string>



</resources>